Source code synced with Black game development kit 5.8.2

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1013,10 +1013,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         int target) const;</span> – Return true if target column is valid.<br>
       <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return</big><big> column</big><big> </big><big>of
       target frame</big><big>.<br>
@@ -1695,13 +1697,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       functions. All these functions declared in <span style="font-style: italic;">Resource</span>
       sub–namespace.<br>
       <br>
-      <span style="font-style: italic;"> create</span> function create single
-      resource or terminate the program if operation failed. It didn't take
-      argument and return handle of the resource.<br>
-      <br>
-      <span style="font-style: italic;"> create_array</span> function create
-      resource array or terminate the program if operation failed. It takes
-      resource amount as argument and return handle of resource array.<br>
+      <span style="font-style: italic;">create</span>
+      function create a single resource or array of resources. It has two
+      form. First form create a single resource. First form takes a handle to
+      resource handle as arguments. Second form create array of resources.
+      Second form takes a handle to resource handle and resource amount as
+      arguments.<br>
       <br>
       <span style="font-style: italic;"> destroy</span> function delete resource
       if it already exists. This function takes resource handle as argument.<br>
@@ -2712,8 +2713,7 @@ Multimedia API</a>. </big>
       6.2.9 – Small changes.<br>
       6.3 – Base sprite subsystem improved.<br>
       6.3.1 – 6.3.2 – Small changes.<br>
-      6.3.3 – Base graphics subsystem back-ported from Neon game development kit
-      5.8.4.<br>
+      6.3.3 – Base graphics subsystem back-ported from Neon game development kit 5.8.4.<br>
       6.3.4 – Visual C++ 2005 support added.<br>
       6.3.5 – Small changes.<br>
       6.3.6 – Ordinary sprite subsystem improved.<br>
@@ -2739,8 +2739,7 @@ Multimedia API</a>. </big>
       6.5.9 – Small bug in game–pad subsystem fixed.<br>
       6.6 – Source code synced with Gray game development kit 2.2.7.<br>
       6.6.1 – Text drawing subsystem improved.<br>
-      6.6.2 – Simple sound subsystem back-ported from Neon game development kit
-      5.7.8.<br>
+      6.6.2 – Simple sound subsystem back-ported from Neon game development kit 5.7.8.<br>
       6.6.3 – Small bug in multimedia subsystem fixed.<br>
       6.6.4 – 6.6.6 – Small changes.<br>
       6.6.7 – Multimedia subsystem improved.<br>
@@ -2785,7 +2784,8 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit
+      5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2891,6 +2891,7 @@ Multimedia API</a>. </big>
       8.8.3 – Memory subsystem improved.<br>
       8.8.4 – Small bug fixed.<br>
       8.8.5 – Small changes.<br>
+      8.8.6 – Source code synced with Black game development kit 5.8.2.<br>
     </big>
   </body>
 </html>
