--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2892,6 +2892,7 @@ Multimedia API</a>. </big>
       8.8.4 – Small bug fixed.<br>
       8.8.5 – Small changes.<br>
       8.8.6 – Source code synced with Black game development kit 5.8.2.<br>
+      8.8.7 – Image resizer improved.<br>
     </big>
   </body>
 </html>
