Animation subsystem improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2893,6 +2893,7 @@ Multimedia API</a>. </big>
       8.8.5 – Small changes.<br>
       8.8.6 – Source code synced with Black game development kit 5.8.2.<br>
       8.8.7 – Image resizer improved.<br>
+      8.8.8 – Animation subsystem improved.<br>
     </big>
   </body>
 </html>
