Source code synced with Black game development kit 5.8.7

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2894,6 +2894,7 @@ Multimedia API</a>. </big>
       8.8.6 – Source code synced with Black game development kit 5.8.2.<br>
       8.8.7 – Image resizer improved.<br>
       8.8.8 – Animation subsystem improved.<br>
+      8.8.9 – Source code synced with Black game development kit 5.8.7.<br>
     </big>
   </body>
 </html>
