Synchronization timer back-ported from Eugene game development kit 8.8.1

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2894,6 +2894,9 @@ Multimedia API</a>. </big>
       8.8.7 – Image resizer improved.<br>
       8.8.8 – Animation subsystem improved.<br>
       8.8.9 – Source code synced with Black game development kit 5.8.7.<br>
+      8.9 – Source code synced with Black game development kit 5.8.8.<br>
+      8.9.0.1 – Documentation updated.<br>
+      8.9.1 – Synchronization timer back-ported from Eugene game development kit 8.8.1.<br>
     </big>
   </body>
 </html>
