Source code synced with Black game development kit 5.9

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2897,6 +2897,7 @@ Multimedia API</a>. </big>
       8.9 – Source code synced with Black game development kit 5.8.8.<br>
       8.9.0.1 – Documentation updated.<br>
       8.9.1 – Synchronization timer back-ported from Eugene game development kit 8.8.1.<br>
+      8.9.2 – Source code synced with Black game development kit 5.9.<br>
     </big>
   </body>
 </html>
