--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2898,7 +2898,8 @@ Multimedia API</a>. </big>
       8.9.0.1 – Documentation updated.<br>
       8.9.1 – Synchronization timer back-ported from Eugene game development kit 8.8.1.<br>
       8.9.2 – Source code synced with Black game development kit 5.9.<br>
-      8.9.3 – Source code synced with Black game development kit 5.9.4<br>
+      8.9.3 – Source code synced with Black game development kit 5.9.4.<br>
+      8.9.4 – Source code synced with Black game development kit 5.9.6.<br>
     </big>
   </body>
 </html>
