--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2901,6 +2901,7 @@ Multimedia API</a>. </big>
       8.9.3 – Source code synced with Black game development kit 5.9.4.<br>
       8.9.4 – Source code synced with Black game development kit 5.9.6.<br>
       8.9.5 – Keyboard input subsystem back-ported from Neon game development kit 7.9.1.<br>
+      8.9.6 – 8.9.7 – Code-page convertor subsystem improved.<br>
     </big>
   </body>
 </html>
