--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -715,6 +715,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         &amp;background);</span> – Load a background </big><big>from the buffer</big><big>.<br>
       <br>
     </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
+
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load a background from target file.</big><br>
     <big><br>
@@ -1377,6 +1378,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
+
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
       <br>
@@ -1564,6 +1566,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
+
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -2330,16 +2333,17 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       All Microsoft Windows specific classes declared in <span style="font-style: italic;">Internal</span>
       sub–namespace.<br>
       <br>
-      <span style="font-style: italic;"> Engine</span> creates the game window
-      and do message processing.<br>
-      <span style="font-style: italic;"> Synchronization</span> implements the
-      synchronization timer.<br>
-      <span style="font-style: italic;"> Display</span> implement display
-      manager.<br>
-    </big> <big><span style="font-style: italic;"> WINGL</span> contain Windows
-      specific OPENGL initialization code.</big><br>
-    <big> <span style="text-decoration: underline;"> Core classes</span><br>
-      <br>
+    </big><big> <span style="font-style: italic;"> Engine</span> creates the
+      game window and do message processing.</big><br>
+    <big> <span style="font-style: italic;"> Synchronization</span> implements
+      the synchronization timer.</big><br>
+    <big> <span style="font-style: italic;"> Display</span> implement display
+      manager.</big><br>
+    <big> </big> <big><span style="font-style: italic;"> WINGL</span> contain
+      Windows specific OPENGL initialization code.</big><br>
+    <big></big><br>
+    <big> <span style="text-decoration: underline;"> Core classes</span></big><br>
+    <big> <br>
       All engine core classes and functions declared in <span style="font-style: italic;">Core</span>
       sub–namespace.<br>
       <br>
@@ -2347,8 +2351,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       counter.<br>
     </big><big><i>Unicode_Convertor</i> implement system code–page to UTF–16
       convertor.<br>
-      <span style="font-style: italic;"> Buffer</span> implement custom memory
-      buffer.<br>
     </big><big><span style="font-style: italic;"> Render</span> implement OPENGL
       render.<br>
       <span style="font-style: italic;"> Resizer</span> intending to calculate
@@ -2396,7 +2398,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big> </big>
     <h2><a name="mozTocId472209" class="mozTocH2"></a><big>Chapter 4. Game–pad</big></h2>
     <big> Game–pad subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick
-Multimedia API</a>. </big>
+Multimedia
+        API</a>. </big>
     <h2><a name="mozTocId804583" class="mozTocH2"></a><big>Chapter 5. Input</big></h2>
     <big> <span style="text-decoration: underline;"> Input back–end</span><br>
       <br>
@@ -2901,7 +2904,8 @@ Multimedia API</a>. </big>
       8.9.3 – Source code synced with Black game development kit 5.9.4.<br>
       8.9.4 – Source code synced with Black game development kit 5.9.6.<br>
       8.9.5 – Keyboard input subsystem back-ported from Neon game development kit 7.9.1.<br>
-      8.9.6 – 8.9.7 – Code-page convertor subsystem improved.<br>
+      8.9.6 – 8.9.7 – Code-page convertor improved.<br>
+      8.9.7 – Small changes.<br>
     </big>
   </body>
 </html>
