--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -715,7 +715,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         &amp;background);</span> – Load a background </big><big>from the buffer</big><big>.<br>
       <br>
     </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
-
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load a background from target file.</big><br>
     <big><br>
@@ -1378,7 +1377,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
-
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
       <br>
@@ -2905,7 +2903,7 @@ Multimedia
       8.9.4 – Source code synced with Black game development kit 5.9.6.<br>
       8.9.5 – Keyboard input subsystem back-ported from Neon game development kit 7.9.1.<br>
       8.9.6 – 8.9.7 – Code-page convertor improved.<br>
-      8.9.7 – Small changes.<br>
+      8.9.8 – 8.9.9 – Small changes.<br>
     </big>
   </body>
 </html>
