Small bug fixed

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2904,6 +2904,7 @@ Multimedia
       8.9.5 – Keyboard input subsystem back-ported from Neon game development kit 7.9.1.<br>
       8.9.6 – 8.9.7 – Code-page convertor improved.<br>
       8.9.8 – 8.9.9 – Small changes.<br>
+      9.0 – Small bug fixed.<br>
     </big>
   </body>
 </html>
