--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2905,6 +2905,7 @@ Multimedia
       8.9.6 – 8.9.7 – Code-page convertor improved.<br>
       8.9.8 – 8.9.9 – Small changes.<br>
       9.0 – Small bug fixed.<br>
+      9.0.1 – Small changes.<br>
     </big>
   </body>
 </html>
