Source code synced with Black game development kit 6.0.3

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2906,6 +2906,7 @@ Multimedia
       8.9.8 – 8.9.9 – Small changes.<br>
       9.0 – Small bug fixed.<br>
       9.0.1 – Small changes.<br>
+      9.0.2 – Source code synced with Black game development kit 6.0.3.<br>
     </big>
   </body>
 </html>
