--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2907,6 +2907,7 @@ Multimedia
       9.0 – Small bug fixed.<br>
       9.0.1 – Small changes.<br>
       9.0.2 – Source code synced with Black game development kit 6.0.3.<br>
+      9.0.3 – Small changes.<br>
     </big>
   </body>
 </html>
