--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1576,7 +1576,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
-
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -2924,6 +2923,7 @@ Multimedia API</a>. </big>
       9.0.4 – Base sprite subsystem improved.<br>
       9.0.5 – Background subsystem improved.<br>
       9.0.6 – Text drawing subsystem improved.<br>
+      9.0.7 – Small changes.<br>
     </big>
   </body>
 </html>
