--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2923,7 +2923,7 @@ Multimedia API</a>. </big>
       9.0.4 – Base sprite subsystem improved.<br>
       9.0.5 – Background subsystem improved.<br>
       9.0.6 – Text drawing subsystem improved.<br>
-      9.0.7 – Small changes.<br>
+      9.0.7 – 9.0.8 – Small changes.<br>
     </big>
   </body>
 </html>
