Image resizer improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2924,6 +2924,7 @@ Multimedia API</a>. </big>
       9.0.5 – Background subsystem improved.<br>
       9.0.6 – Text drawing subsystem improved.<br>
       9.0.7 – 9.0.8 – Small changes.<br>
+      9.0.9 – Image resizer improved.<br>
     </big>
   </body>
 </html>
